fix spacing in month sections

--- a/src/stylesheets/showInfo.scss
+++ b/src/stylesheets/showInfo.scss
@@ -49,6 +49,9 @@
     color: $eclaire-dark-grey;
     opacity: 0.9;
 }
+.month-container {
+    padding-bottom: 1.5em;
+}
 .band-logo-alt-text {
     font-family: arbotek, sans-serif;
     font-weight: 900;
